<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#282828"
    tools:context="com.example.nachu.calc.MainActivity">
    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <TextView
            android:id="@+id/tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="right"
            android:textColor="#ffffff"
            android:textSize="32sp" />
        <LinearLayout
            android:id="@+id/img_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:src="@drawable/ic_backspace_black_24dp"
                android:onClick="process"/>
            <ImageButton
                android:id="@+id/clear"
                android:src="@drawable/c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:onClick="process"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="#000000">
        <ImageButton
            android:id="@+id/swipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#49aefc"
            android:src="@drawable/swipe_arrow"
            android:layout_weight="0.8"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:onClick="process"/>
        <LinearLayout
            android:id="@+id/lnLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">
            <Button
                android:id="@+id/sin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sin"
                style="@style/gangnamestyle2"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="process"/>
            <Button
                android:id="@+id/cos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/cos"
                style="@style/gangnamestyle2"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="process"/>
            <Button
                android:id="@+id/tan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/gangnamestyle2"
                android:layout_weight="1"
                android:text="@string/tan"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="process"/>
            <Button
                android:id="@+id/pi"
                android:layout_width="match_parent"
                style="@style/gangnamestyle2"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pi"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="process"/>
            <Button
                android:id="@+id/fact"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/gangnamestyle2"
                android:layout_weight="1"
                android:text="@string/fact"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="process"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sinLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/ln"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ln"
                style="@style/gangnamestyle2"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="process"/>
            <Button
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/log"
                style="@style/gangnamestyle2"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:onClick="process"/>
            <Button
                android:id="@+id/exp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/gangnamestyle2"
                android:text="@string/exp"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:onClick="process"/>
            <Button
                android:id="@+id/cap"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/gangnamestyle2"
                android:text="@string/pow"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:onClick="process"/>
            <Button
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/gangnamestyle2"
                android:textAllCaps="false"
                android:text="@string/root"
                android:textSize="25sp"
                android:onClick="process"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorBlack">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:layout_weight="1"
                    style="@style/gangnamestyle1"
                    android:textSize="20sp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/eight"
                    style="@style/gangnamestyle1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    style="@style/gangnamestyle1"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    android:textSize="20sp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/divide"
                    style="@style/gangnamestyle2"
                    android:textSize="30sp"
                    android:paddingTop="1dp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/brOpen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/brOpen"
                    style="@style/gangnamestyle2"
                    android:textSize="30sp"
                    android:paddingTop="1dp"
                    android:onClick="process"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    style="@style/gangnamestyle1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:layout_weight="1"
                    style="@style/gangnamestyle1"
                    android:textSize="20sp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/six"
                    style="@style/gangnamestyle1"
                    android:textSize="20sp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    style="@style/gangnamestyle2"
                    android:textSize="30sp"
                    android:paddingTop="1dp"
                    android:onClick="process"/>
                <Button
                    android:id="@+id/brClose"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/brClose"
                    android:textSize="30sp"
                    style="@style/gangnamestyle2"
                    android:paddingTop="1dp"
                    android:onClick="process"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/one"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/one"
                            style="@style/gangnamestyle1"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:onClick="process"/>
                        <Button
                            android:id="@+id/two"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            style="@style/gangnamestyle1"
                            android:text="@string/two"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:onClick="process"/>
                        <Button
                            android:id="@+id/three"
                            android:layout_width="0dp"
                            style="@style/gangnamestyle1"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/three"
                            android:textSize="20sp"
                            android:onClick="process"/>
                        <Button
                            android:id="@+id/minus"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/minus"
                            style="@style/gangnamestyle2"
                            android:textSize="30sp"
                            android:paddingTop="1dp"
                            android:onClick="process"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/zero"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/zero"
                            style="@style/gangnamestyle1"
                            android:layout_weight="2"
                            android:textSize="20sp"
                            android:onClick="process"/>
                        <Button
                            android:id="@+id/dot"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/dot"
                            android:layout_weight="1"
                            android:paddingTop="1dp"
                            style="@style/gangnamestyle1"
                            android:textSize="20sp"
                            android:onClick="process"/>
                        <Button
                            android:id="@+id/plus"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/plus"
                            style="@style/gangnamestyle2"
                            android:textSize="20sp"
                            android:onClick="process"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <Button
                        android:id="@+id/equal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/equals"
                        style="@style/gangnamestyle2"
                        android:textSize="35sp"
                        android:onClick="action"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
